--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <meta name="keywords" content="School, SLack, Presentations">
     <meta name="author" content="Rania Elqadah">
     <link href="./css/normalize.css" type="text/css" rel="stylesheet">
-    <link href="./css/normalize.css" type="text/css" rel="stylesheet">
+    <link href="./css/style.css" type="text/css" rel="stylesheet">
+
   </head>
 
 
