--- a/index.html
+++ b/index.html
@@ -18,10 +18,9 @@
 
   <h1>Course Directory</h1>
   <ul>
-  	<a href="projects/code exercises"><li>Project 1</li></a>
-  	<a href="#"><li>Project 1</li></a>
-  	<a href="#"><li>Project 2</li></a>
-  	<a href="#"><li>Project 3</li></a>
+  	<a href="hello-world"><li>Project 1</li></a>
+  	<a href="code-exercises"><li>Project 2</li></a>
+  	<a href="responsive-project"><li>Project 4</li></a>
   </ul>
 
 
