--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <meta name="author" content="Rania Elqadah">
     <link href="./css/normalize.css" type="text/css" rel="stylesheet">
     <link href="./css/style.css" type="text/css" rel="stylesheet">
-
   </head>
 
 
@@ -18,9 +17,9 @@
 
   <h1>Course Directory</h1>
   <ul>
-  	<a href="hello-world"><li>Project 1</li></a>
-  	<a href="code-exercises"><li>Project 2</li></a>
-  	<a href="responsive-project"><li>Project 4</li></a>
+  	<a href="./hello-world"><li>Hello World</li></a>
+  	<a href="./code-exercises"><li>Code Exercises</li></a>
+  	<a href="./responsive-project"><li>Responsive Project</li></a>
   </ul>
 
 
