--- a/responsive-project/index.html
+++ b/responsive-project/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>#</title>
+    <title>Responsive Project</title>
     <meta charset="UTF-8">
-    <meta name="description" content="#">
-    <meta name="keywords" content="#">
-    <meta name="author" content="#">
+    <meta name="description" content="Hello World Exercise">
+    <meta name="keywords" content="School, SLack, Presentations">
+    <meta name="author" content="Rania Elqadah">
+    <link href="./css/normalize.css" type="text/css" rel="stylesheet">
+    <link href="./css/style.css" type="text/css" rel="stylesheet">
   </head>
 
   <body>
-  <h1>Placeholder Text</h1>
+  <h1>Responsive Project</h1>
   </body>
 </html>
