updated the index and css

--- a/hello-world/index.html
+++ b/hello-world/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>#</title>
+  <title>Hello World</title>
     <meta charset="UTF-8">
-    <meta name="description" content="#">
-    <meta name="keywords" content="#">
-    <meta name="author" content="#">
+    <meta name="description" content="Hello World Exercise">
+    <meta name="keywords" content="School, SLack, Presentations">
+    <meta name="author" content="Rania Elqadah">
+    <link href="./hello-world/css/normalize.css" type="text/css" rel="stylesheet">
+    <link href="./hello-world/css/style.css" type="text/css" rel="stylesheet">
   </head>
 
   <body>
-  <h1>Placeholder Text</h1>
+  <h1>Hello World</h1>
   </body>
 </html>
