updated hello world html

--- a/hello-world/index.html
+++ b/hello-world/index.html
@@ -11,6 +11,19 @@
   </head>
 
   <body>
-  <h1>Hello World</h1>
+ <!--here is the type section-->
+
+    <h1>Hello World!</h1>
+    <h2> Three Things I'm Looking Forward to this School Year</h2>
+
+    <!--here is my list-->
+
+    <ul>
+      <li>Working in teams</li>
+      <li>Exploring my design aesthetic</li>
+      <li>Building a better bond with my classmates</li>
+    </ul>
+
+
   </body>
 </html>
