--- a/code-exercises/exercise-1/index.html
+++ b/code-exercises/exercise-1/index.html
@@ -12,5 +12,14 @@
 
   <body>
   <h1>Code Excercises</h1>
+
+ <ul>
+  	<a href="./exercise-1"><li>Exercise 1</li></a>
+  	<a href="./exercise-2"><li>Exercise 2</li></a>
+  	<a href="./exercise-3"><li>Exercise 3</li></a>
+  	<a href="./exercise-4"><li>Exercise 4</li></a>
+  </ul>
+
+
   </body>
 </html>
