--- a/code-exercises/exercise-1/index.html
+++ b/code-exercises/exercise-1/index.html
@@ -6,12 +6,17 @@
     <meta name="description" content="Hello World Exercise">
     <meta name="keywords" content="School, SLack, Presentations">
     <meta name="author" content="Rania Elqadah">
-    <link href="./code-exercises/css/normalize.css" type="text/css" rel="stylesheet">
-    <link href="./code-exercises/css/style.css" type="text/css" rel="stylesheet">
+    <link href="./css/normalize.css" type="text/css" rel="stylesheet">
+    <link href="./css/style.css" type="text/css" rel="stylesheet">
   </head>
 
   <body>
-  <h1>Code Excercises</h1>
+  <h1>Button</h1>
+
+
+
+<button class="button button1">Green</button>
+
 
 
   </body>
