--- a/code-exercises/exercise-1/index.html
+++ b/code-exercises/exercise-1/index.html
@@ -15,7 +15,7 @@
 
 
 
-	<a href="#"><button class="padding-hover">button 1</a>button></body>a>
+	<a href="#"><button class="padding-hover">button 1</button></a>
 	<a href="#"><button>button 2</button></a>
 
 
