--- a/code-exercises/exercise-1/index.html
+++ b/code-exercises/exercise-1/index.html
@@ -6,8 +6,8 @@
     <meta name="description" content="Hello World Exercise">
     <meta name="keywords" content="School, SLack, Presentations">
     <meta name="author" content="Rania Elqadah">
-    <link href="./css/normalize.css" type="text/css" rel="stylesheet">
-    <link href="./css/style.css" type="text/css" rel="stylesheet">
+    <link href="../css/normalize.css" type="text/css" rel="stylesheet">
+    <link href="../css/style.css" type="text/css" rel="stylesheet">
   </head>
 
   <body>
