--- a/hello-world/index.html
+++ b/hello-world/index.html
@@ -6,8 +6,8 @@
     <meta name="description" content="Hello World Exercise">
     <meta name="keywords" content="School, SLack, Presentations">
     <meta name="author" content="Rania Elqadah">
-    <link href="./hello-world/css/normalize.css" type="text/css" rel="stylesheet">
-    <link href="./hello-world/css/style.css" type="text/css" rel="stylesheet">
+    <link href="../hello-world/css/normalize.css" type="text/css" rel="stylesheet">
+    <link href="../hello-world/css/style.css" type="text/css" rel="stylesheet">
   </head>
 
   <body>
