--- a/code-exercises/exercise-2/index.html
+++ b/code-exercises/exercise-2/index.html
@@ -6,11 +6,23 @@
     <meta name="description" content="Hello World Exercise">
     <meta name="keywords" content="School, SLack, Presentations">
     <meta name="author" content="Rania Elqadah">
-    <link href="./code-exercises/css/normalize.css" type="text/css" rel="stylesheet">
-    <link href="./code-exercises/css/style.css" type="text/css" rel="stylesheet">
+    <link href="../css/normalize.css" type="text/css" rel="stylesheet">
+    <link href="../css/style.css" type="text/css" rel="stylesheet">
   </head>
 
   <body>
-  <h1>Code Excercises</h1>
+  <h1>Background Image</h1>
+
+   
+  <img src="../joe-smile.jpg">
+
+    <div class="container">
+
+      <img src="../joe-smile.jpg">
+      <h2>MANIFEST POSITIVITY</h2>
+      
+    </div>
+
+
   </body>
 </html>
