--- a/code-exercises/exercise-3/index.html
+++ b/code-exercises/exercise-3/index.html
@@ -6,11 +6,16 @@
     <meta name="description" content="Hello World Exercise">
     <meta name="keywords" content="School, SLack, Presentations">
     <meta name="author" content="Rania Elqadah">
-    <link href="./code-exercises/css/normalize.css" type="text/css" rel="stylesheet">
-    <link href="./code-exercises/css/style.css" type="text/css" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, intial - scale=1">
+    <link href="../css/normalize.css" type="text/css" rel="stylesheet">
+    <link href="../css/style.css" type="text/css" rel="stylesheet">
   </head>
 
   <body>
-  <h1>Code Excercises</h1>
+  <h1>Media Query</h1>
+
+
+
+
   </body>
 </html>
