--- a/code-exercises/index.html
+++ b/code-exercises/index.html
@@ -19,6 +19,7 @@
     <a href="./exercise-2"><li>Exercise 2</li></a>
     <a href="./exercise-3"><li>Exercise 3</li></a>
     <a href="./exercise-4"><li>Exercise 4</li></a>
+    <a href="./magazine-layout"><li>Exercise 5</li></a>
   </ul>
 
 
