--- a/code-exercises/magazine-layout/index.html
+++ b/code-exercises/magazine-layout/index.html
@@ -11,15 +11,10 @@
   </head>
 
   <body>
-  <h1>Code Exercises</h1>
+  <h1>Magazine Layout</h1>
 
-
- <ul>
-    <a href="./exercise-1"><li>Exercise 1</li></a>
-    <a href="./exercise-2"><li>Exercise 2</li></a>
-    <a href="./exercise-3"><li>Exercise 3</li></a>
-    <a href="./exercise-4"><li>Exercise 4</li></a>
-  </ul>
+<div class="bathroom">
+  </div>
 
 
   </body>
