--- a/code-exercises/magazine-layout/index.html
+++ b/code-exercises/magazine-layout/index.html
@@ -13,8 +13,10 @@
   <body>
   <h1>Magazine Layout</h1>
 
-<div class="bathroom">
+<div class="container">
+  <img src="https://github.com/ranyewest/gra-321/blob/master/code-exercises/magazine-layout/img/bathroom.png?raw=true">
   </div>
+
 
 
   </body>
