--- a/code-exercises/magazine-layout/index.html
+++ b/code-exercises/magazine-layout/index.html
@@ -14,10 +14,43 @@
   <h1>Magazine Layout</h1>
 
 <div class="container">
-  <img src="https://github.com/ranyewest/gra-321/blob/master/code-exercises/magazine-layout/img/bathroom.png?raw=true">
+  <img src="https://github.com/ranyewest/gra-321/blob/master/code-exercises/magazine-layout/img/bathroom.png?raw=true" alt="XD layout" width="1249" height="1446">
   </div>
 
 
+<div class="big-container">
+
+
+  <div class="header-container">
+    <h2> Bold, minimal, dynamtic.</h2>
+  </div>
+
+
+
+  <div class="caption-container">
+  <p1> We love the symmetry and textural detail of fluted wood, an element that takes any piece from expected to outstanding.</p1>
+  </div>
+
+
+
+  <div class="body-container1">
+    <p2> Opposite page: NEW Walton Ribbed Leg Dining Table $1499. Seats six. | NEW Addison White Slipcovered Dining Chair $399. | Pera Large Vase $34.95 | NEW Kennet 90" Table Runner $69.95 | Arren Brass Linear 5-Light Pendant with Silver Round Shades $429. Above: NEW Walton Ribbed Sideboard: $1499. NEW Andelyn Large Frosted Glass Hurricane: 49.95 </p2>
+  </div>
+
+
+
+  <div class="body-container2">
+    <p2> Small Hurricane: $16.95 Medium Hurricane: $39.95 NEW Edmer Spotted Large White Vase $59.95 | NEW Revolve Brass Tabletop Sculpture $29.95 | Edge Brass Capsule Wall Mirror $299. | Arren Brass Wall Sconce with Silver Angled Shade $99.95 | Shop additional colors, styles, sizes and choices in stores and online. </p2>
+  </div>
+
+</div>
+
+
+
+<div class="page-container">
+  <p3>crateandbarrel.com       43
+</p3>
+</div>
 
   </body>
 </html>
