--- a/code-exercises/magazine-layout/index.html
+++ b/code-exercises/magazine-layout/index.html
@@ -22,7 +22,7 @@
 
 
   <div class="header-container">
-    <h2> Bold, minimal, dynamtic.</h2>
+    <h2> <strong>Bold, minimal, dynamtic.</strong></h2>
   </div>
 
 
@@ -34,13 +34,13 @@
 
 
   <div class="body-container1">
-    <p2> Opposite page: NEW Walton Ribbed Leg Dining Table $1499. Seats six. | NEW Addison White Slipcovered Dining Chair $399. | Pera Large Vase $34.95 | NEW Kennet 90" Table Runner $69.95 | Arren Brass Linear 5-Light Pendant with Silver Round Shades $429. Above: NEW Walton Ribbed Sideboard: $1499. NEW Andelyn Large Frosted Glass Hurricane: 49.95 </p2>
+    <p2> Opposite page: NEW Walton Ribbed Leg Dining Table $1499. Seats six. | <strong>NEW</strong>Addison White Slipcovered Dining Chair $399. | Pera Large Vase $34.95 | <strong>NEW</strong> Kennet 90" Table Runner $69.95 | Arren Brass Linear 5-Light Pendant with Silver Round Shades $429. Above: <strong>NEW</strong> Walton Ribbed Sideboard: $1499. <strong>NEW</strong> Andelyn Large Frosted Glass Hurricane: 49.95 </p2>
   </div>
 
 
 
   <div class="body-container2">
-    <p2> Small Hurricane: $16.95 Medium Hurricane: $39.95 NEW Edmer Spotted Large White Vase $59.95 | NEW Revolve Brass Tabletop Sculpture $29.95 | Edge Brass Capsule Wall Mirror $299. | Arren Brass Wall Sconce with Silver Angled Shade $99.95 | Shop additional colors, styles, sizes and choices in stores and online. </p2>
+    <p2> Small Hurricane: $16.95 Medium Hurricane: $39.95 <strong>NEW</strong> Edmer Spotted Large White Vase $59.95 | <strong>NEW</strong> Revolve Brass Tabletop Sculpture $29.95 | Edge Brass Capsule Wall Mirror $299. | Arren Brass Wall Sconce with Silver Angled Shade $99.95 | Shop additional colors, styles, sizes and choices in stores and online. </p2>
   </div>
 
 </div>
