--- a/responsive-project/index.html
+++ b/responsive-project/index.html
@@ -6,11 +6,11 @@
     <meta name="description" content="Hello World Exercise">
     <meta name="keywords" content="School, SLack, Presentations">
     <meta name="author" content="Rania Elqadah">
-    <link href="./responsive-project/css/normalize.css" type="text/css" rel="stylesheet">
-    <link href="./responsive-project/css/style.css" type="text/css" rel="stylesheet">
+    <link href="../responsive-project/css/normalize.css" type="text/css" rel="stylesheet">
+    <link href="../responsive-project/css/style.css" type="text/css" rel="stylesheet">
   </head>
 
   <body>
-  <h1>Responsive Project</h1>
+  <h1><strong>charlie's</br>cafe<strong></h1>
   </body>
 </html>
