gang gang we did it

--- a/responsive-project/index.html
+++ b/responsive-project/index.html
@@ -11,6 +11,519 @@
   </head>
 
   <body>
-  <h1><strong>charlie's</br>cafe<strong></h1>
+
+    <!-- title header -->
+
+    <div class="header-container">
+      <h1> <strong>charlie's</br>cafe</strong></h2>
+    </div>
+
+
+<!--- buttons / nav bar are here -->
+
+    <a href="#menu"><button>menu</button></a>
+    <a href="#about"><button>about</button></a>
+    <a href="#locations"><button>locations</button></a>
+    <a href="#contact"><button>contact</button></a>
+
+
+<!--- image banner is here -->
+
+    <div class="container">
+      <img src="https://github.com/ranyewest/gra-321/blob/master/responsive-project/img/flower%20banner%20-01.png?raw=true"
+      alt="flowerbanner" width="320px" height="120px">
+      </div>
+
+
+<!-- menu header -->
+
+      <div class="header-container">
+        <h2> <strong>menu</strong></h2>
+      </div>
+
+<!-- gallery images -->
+
+      <div class="gallery-1">
+        <img src="https://github.com/ranyewest/gra-321/blob/master/responsive-project/img/honey%20cup-01.png?raw=true"
+        alt="honey cup" width="145px" height="145px">
+      </div>
+
+      <div class="gallery-2">
+        <img src="https://github.com/ranyewest/gra-321/blob/master/responsive-project/img/tea%20and%20cookies-01.png?raw=true"
+        alt="tea and cookies" width="145px" height="145px">
+      </div>
+</br>
+      <div class="gallery-3">
+        <img src="https://github.com/ranyewest/gra-321/blob/master/responsive-project/img/honey%20lemon-01.png?raw=true"
+        alt="honey lemon" width="145px" height="145px">
+      </div>
+
+      <div class="gallery-4">
+        <img src="https://github.com/ranyewest/gra-321/blob/master/responsive-project/img/cinnamon-01.png?raw=true"
+        alt="cinnamon" width="145px" height="145px">
+      </div>
+
+
+
+<!--- menu starts here-->
+
+
+
+
+<!-- hot drinks here -->
+<section id="menu">
+<div class="sub-header-container">
+  <h3> <strong>hot drinks</strong></h3>
+</div>
+
+<div class="menu-items">
+  <p1>
+drip coffee</br>
+espresso </br>
+macchiato			</br>
+americano			</br>
+cappuccino			</br>
+cafe latte 			</br>
+cafe mocha 			</br>
+caramel macchiato 		</br>
+hot chocolate 		</br>
+chai 				</br>
+organic tea </br>
+</br>
+</br>
+<strong> + add ons </strong> </br>
+  almond milk <br>
+  soy milk
+</p1>
+</div>
+
+<div class="prices-S">
+  <p2>
+S $2.15</br>
+S $2.25</br>
+S $2.35</br>
+S $2.00</br>
+S $2.95</br>
+S $3.55</br>
+S $3.55</br>
+S $3.95</br>
+S $3.25</br>
+S $3.25</br>
+S $2.50</br>
+</br>
+</br>
+</br>
+$0.75 </br>
+$0.25
+</p2>
+</div>
+
+
+<div class="prices-M">
+  <p3>
+    M $2.50 </br>
+    M $2.75</br>
+    M $2.85</br>
+    M $2.00</br>
+    M $3.50</br>
+    M $3.95</br>
+    M $4.95</br>
+    M $4.45</br>
+    M $3.75</br>
+    M $3.75</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+</p3>
+</div>
+
+
+
+
+<div class="prices-L">
+  <p4>
+L $2.75</br>
+L $3.25</br>
+L $3.35</br>
+L $3.35</br>
+L $4.25</br>
+L $4.75</br>
+L $5.75</br>
+L $5.05</br>
+L $4.45</br>
+L $4.25</br>
+
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+</p4>
+</div>
+
+
+
+<!-- sandwitches here -->
+
+<div class="sub-header-container">
+  <h3> <strong>sandwitches</strong></h3>
+</div>
+<div class="menu-items">
+  <p1>
+    italiano</br>
+    seville</br>
+    milani	</br>
+    caprese</br>
+    turkey florentine</br>
+    vegetarian</br>
+    mediterranean chicken</br>
+
+</p1>
+</div>
+
+
+<div class="prices-special">
+  <p3>
+    $6.95</br>
+    $6.95</br>
+    $6.95</br>
+    $6.95</br>
+    $6.95</br>
+    $6.95</br>
+    $6.95</br>
+
+</p3>
+</div>
+
+
+
+<!-- hot teas here -->
+
+<div class="sub-header-container">
+  <h3> <strong>hot teas</strong></h3>
+</div>
+
+<div class="menu-items">
+  <p1>
+    black tea</br>
+    early grey</br>
+    english breakfast</br>
+    chai</br>
+    green tea</br>
+    yerba mate</br>
+    jasmine sencha</br>
+    raspberry hibiscus</br>
+    chamomile</br>
+    lemon ginger mint</br>
+</br>
+</br>
+<strong> + add ons </strong> </br>
+  emergen-c <br>
+  </br>
+  </br>
+</p1>
+</div>
+
+<div class="prices-S">
+  <p2>
+  </br>
+      </br>
+    S $2.35  </br>
+    S $2.00  </br>
+    S $2.95  </br>
+    S $3.55  </br>
+    S $3.55  </br>
+    S $3.95  </br>
+</br>
+</br>
+</br>
+</br>
+</br>
+$1.00 </br></br>
+</br>
+</p2>
+</div>
+
+
+<div class="prices-M">
+  <p3>
+  M $2.50   </br>
+  M $2.75</br>
+  M $2.85</br>
+  M $2.00</br>
+  M $3.50</br>
+  M $3.95</br>
+  M $4.95</br>
+  M $4.45</br>
+  M $3.75</br>
+  M $3.75</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+</p3>
+</div>
+
+
+
+
+<div class="prices-L">
+  <p4>
+  </br>
+  </br>
+    L $3.35</br>
+    L $3.35</br>
+    L $4.25</br>
+    L $4.75</br>
+    L $5.75</br>
+  </br>
+    </br>
+    L $4.25</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+</p4>
+</div>
+
+
+<!-- drink specials here -->
+
+<div class="sub-header-container">
+  <h3> <strong>drink specials</strong></h3>
+</div>
+<div class="menu-items">
+  <p1>
+  thai iced cappuccino</br>
+  joyous almond latte</br>
+  banana nut mocha</br>
+  mochaccino</br>
+  white chocolate latte</br>
+  cinnamon iced mocha</br>
+  dark chocolate lattev
+
+</p1>
+</div>
+
+
+<div class="prices-special">
+  <p3>
+    $6.95</br>
+    $6.95</br>
+    $6.95</br>
+    $6.95</br>
+    $6.95</br>
+    $6.95</br>
+    $6.95</br>
+</p3>
+</div>
+
+
+<!-- iced drinks here -->
+
+<div class="sub-header-container">
+  <h3> <strong>iced drinks</strong></h3>
+</div>
+
+<div class="menu-items">
+  <p1>
+    coffee</br>
+    americano</br>
+    latte</br>
+    mocha</br>
+    chai</br>
+    mocha frappe</br>
+    thai cappuccino</br>
+    thai tea</br>
+    ice tea</br>
+</br>
+</br></br>
+</br></br></br></br>
+</br>
+</p1>
+</div>
+
+<div class="prices-S">
+  <p2>
+
+    S $2.35  </br>
+    S $2.00  </br>
+    S $2.95  </br>
+</br>
+</br></br>
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+</p2>
+</div>
+
+
+<div class="prices-M">
+  <p3>
+    M $2.50 </br>
+    M $2.75</br>
+    M $2.85</br>
+    M $2.00</br>
+    M $3.50</br>
+    M $3.95</br>
+    M $4.95</br>
+    M $4.45</br>
+    M $3.75</br>
+    M $3.75</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+</p3>
+</div>
+
+
+
+
+<div class="prices-L">
+  <p4>
+  </br>
+  </br>
+    L $3.35</br>
+    L $3.35</br>
+    L $4.25</br>
+    L $4.75</br>
+    L $5.75</br>
+  </br>
+    </br>
+    L $4.25</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+</br></p4>
+</div>
+
+<!-- ice teas here -->
+
+<div class="sub-header-container">
+  <h3> <strong>ice teas</strong></h3>
+</div>
+<div class="menu-items">
+  <p1>
+    morrocan mint</br>
+    black passion fruit</br>
+    cucumber mint </br>
+    pink lemonade</br>
+    black berry lemonade</br>
+    citrus mint </br>
+    cucumber lemon</br>
+
+</p1>
+</div>
+
+
+<div class="prices-special">
+  <p3>
+    $6.95</br>
+    $6.95</br>
+    $6.95</br>
+    $6.95</br>
+    $6.95</br>
+    $6.95</br>
+    $6.95</br>
+</p3>
+</div>
+
+
+<!--- image banner02 is here -->
+
+    <div class="container02">
+      <img src="https://github.com/ranyewest/gra-321/blob/master/responsive-project/img/crepe%20banner.png?raw=true"
+      alt="flowerbanner" width="320px" height="120px">
+      </div>
+
+
+
+  <!-- about header -->
+
+<section id="about">
+        <div class="header-container">
+          <h2> <strong>about</strong></h2>
+        </div>
+        <div class="about-section">
+          <p5>
+            charlie's café, one of sun devil dining’s local restaurant partners, brings the taste of europe to asu! proudly serving lavazza italian espresso and featuring fresh european sandwiches and baked goods. come experience the difference! with three locations on campus, there is always a charlie's cafe near! charlie’s café is located at the hayden library, bio design b building and the college of design.
+        </p5>
+        </div>
+
+
+<section id="contact">
+        <div class="sub-header-container">
+          <h3> <strong>contact us</strong></h3>
+        </div>
+        <p6> (480) 965-3515 </p6>
+
+
+    <!-- locations header -->
+
+        <section id="locations">
+              <div class="header-container">
+                <h2> <strong>hours by locations</strong></h2>
+              </div>
+
+
+              <div class="sub-header-container">
+                <h4>charlie's cafe hayden library</h4>
+              </div>
+              <div class="about-section">
+              <p5>
+                monday - friday : 7 am - 3 pm
+              </br>
+                saturday - sunday : closed</br></br>
+              </p5>
+
+
+              <div class="sub-header-container02">
+                <h4>charlie's cafe deisgn north</h4>
+              </div>
+
+              <div class="about-section01">
+              <p5>
+                monday - friday : 7 am - 3 pm
+              </br>
+                saturday - sunday : closed </br></br>
+              </p5>
+
+
+              <div class="sub-header-container02">
+                <h4>charlie's cafe biodeisgn</h4>
+              </div>
+
+              <div class="about-section01">
+              <p5>
+                monday - friday : 7 am - 4 pm
+              </br>
+                saturday - sunday : closed </br></br>
+              </p5>
+
+
+  <!-- title header -->
+
+              <div class="header-container">
+                <h1> <strong>charlie's</br>cafe</strong></h2>
+              </div>
+</br></br></br>
   </body>
 </html>
