nothing is workinggggggg ughhhh

--- a/responsive-project/index.html
+++ b/responsive-project/index.html
@@ -31,7 +31,7 @@
 
     <div class="container">
       <img src="https://github.com/ranyewest/gra-321/blob/master/responsive-project/img/flower%20banner%20-01.png?raw=true"
-      alt="flowerbanner" width="320px" height="120px">
+      alt="flowerbanner" width="100%" height="100%">
       </div>
 
 
@@ -44,23 +44,23 @@
 <!-- gallery images -->
 
       <div class="gallery-1">
-        <img src="https://github.com/ranyewest/gra-321/blob/master/responsive-project/img/honey%20cup-01.png?raw=true"
-        alt="honey cup" width="145px" height="145px">
+        <img id="honeycup" src="https://github.com/ranyewest/gra-321/blob/master/responsive-project/img/honey%20cup-01.png?raw=true"
+        alt="honey cup" width="145px" height="145px" position="relavtive">
       </div>
 
       <div class="gallery-2">
         <img src="https://github.com/ranyewest/gra-321/blob/master/responsive-project/img/tea%20and%20cookies-01.png?raw=true"
-        alt="tea and cookies" width="145px" height="145px">
+        alt="tea and cookies" width="145px" height="145px" position="relavtive">
       </div>
-</br>
+
       <div class="gallery-3">
         <img src="https://github.com/ranyewest/gra-321/blob/master/responsive-project/img/honey%20lemon-01.png?raw=true"
-        alt="honey lemon" width="145px" height="145px">
+        alt="honey lemon" width="145px" height="145px" position="relavtive">
       </div>
 
       <div class="gallery-4">
         <img src="https://github.com/ranyewest/gra-321/blob/master/responsive-project/img/cinnamon-01.png?raw=true"
-        alt="cinnamon" width="145px" height="145px">
+        alt="cinnamon" width="145px" height="145px" position="relavtive">
       </div>
 
 
@@ -72,6 +72,7 @@
 
 <!-- hot drinks here -->
 <section id="menu">
+  <div class="hotdrinks_move">
 <div class="sub-header-container">
   <h3> <strong>hot drinks</strong></h3>
 </div>
@@ -164,15 +165,15 @@ L $4.25</br>
 </br>
 </p4>
 </div>
-
+</div>
 
 
 <!-- sandwitches here -->
-
-<div class="sub-header-container">
+<div class="sandwiches_move">
+<div class="sub-header-container-sandwiches">
   <h3> <strong>sandwitches</strong></h3>
 </div>
-<div class="menu-items">
+<div class="menu-items-sand">
   <p1>
     italiano</br>
     seville</br>
@@ -186,7 +187,7 @@ L $4.25</br>
 </div>
 
 
-<div class="prices-special">
+<div class="prices-special-sand">
   <p3>
     $6.95</br>
     $6.95</br>
@@ -198,7 +199,7 @@ L $4.25</br>
 
 </p3>
 </div>
-
+</div>
 
 
 <!-- hot teas here -->
@@ -451,7 +452,7 @@ $1.00 </br></br>
 
     <div class="container02">
       <img src="https://github.com/ranyewest/gra-321/blob/master/responsive-project/img/crepe%20banner.png?raw=true"
-      alt="flowerbanner" width="320px" height="120px">
+      alt="flowerbanner" width="100%" height="100%">
       </div>
 
 
@@ -492,32 +493,37 @@ $1.00 </br></br>
                 monday - friday : 7 am - 3 pm
               </br>
                 saturday - sunday : closed</br></br>
-              </p5>
+              </p5> </div>
 
 
-              <div class="sub-header-container02">
-                <h4>charlie's cafe deisgn north</h4>
+
+              <div class="design_north">
+              <div class="sub-header-container">
+                <h4>charlie's cafe design north</h4>
               </div>
 
-              <div class="about-section01">
+              <div class="about-section">
               <p5>
                 monday - friday : 7 am - 3 pm
               </br>
                 saturday - sunday : closed </br></br>
-              </p5>
+              </p5> </div></div>
 
 
+
+              <div class="bio_move">
               <div class="sub-header-container02">
-                <h4>charlie's cafe biodeisgn</h4>
+                <h4>charlie's cafe biodesign</h4>
               </div>
 
-              <div class="about-section01">
+              <div class="about-section02">
               <p5>
                 monday - friday : 7 am - 4 pm
               </br>
                 saturday - sunday : closed </br></br>
               </p5>
-
+            </div>
+            </div
 
   <!-- title header -->
 
